--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	</header>
 	<div class="nav-bg">
 	<nav class="navigation container">
-	<a href="#">Inicio</a>
-	<a href="#">Sobre Mi</a>
+	<a href="index.html">Inicio</a>
+	<a href="3">Sobre Mi</a>
 		<a href="#">Clientes</a>
 		<a href="#">Contacto</a>
 	</nav>
