--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="nav-bg">
 	<nav class="navigation container">
 	<a href="index.html">Inicio</a>
-	<a href="3">Sobre Mi</a>
+	<a href="#">Sobre Mi</a>
 		<a href="#">Clientes</a>
 		<a href="#">Contacto</a>
 	</nav>
