--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</header>
 	<div class="nav-bg">
 	<nav class="navigation container">
-	<a href="/index.html">Inicio</a>
+	<a href="index.html">Inicio</a>
 	<a href="#">Sobre Mi</a>
 		<a href="#">Clientes</a>
 		<a href="#">Contacto</a>
