--- a/sobre mi.html
+++ b/sobre mi.html
@@ -39,7 +39,10 @@
 	</div>
 		
 	<main class="container shadow">
-		<h2>Mis servicios</h2>
+		<h2>Sobre Mi</h2>
+        <p>Edad: 20 años
+            
+        </p>
 	
 	
 	<section>
