--- a/sobre mi.html
+++ b/sobre mi.html
@@ -40,10 +40,9 @@
 		
 	<main class="container shadow">
 		<h2>Sobre Mi</h2>
-        <p>Edad: 20 años
-            
-        </p>
-	
+        <p>Soy Francisco javier Sulé tengo 20 años y vivo en Santo Tome, Santa Fe, Argentina.</p>
+	<p>En el año 2020 empece a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.
+    En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript.</p>
 	
 	<section>
 		<h2>Contacto</h2>
