--- a/sobre mi.html
+++ b/sobre mi.html
@@ -43,7 +43,7 @@
         <div class="service">
         <p>Soy Francisco Javier Sulé tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
 	<p>En el año 2020 empece a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
-    En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript.</p>
+    En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.</p>
 </div>
 	<section>
 		<h2>Contacto</h2>
