--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<meta lang="es">
+	<meta lang="lat">
 	<meta charset="utf-8">
 	<title>FRANCISCO SULE</title>
 	<link rel="stylesheet" href="normalize.css">
