--- a/sobre mi.html
+++ b/sobre mi.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<meta lang="lat">
+	<meta lang="latin">
 	<meta charset="utf-8">
 	<title>FRANCISCO SULE</title>
 	<link rel="stylesheet" href="normalize.css">
