--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<meta lang="latin">
 	<meta charset="utf-8">
-	<title>FRANCISCO SULE</title>
+	<title>FRANCISCO SULÉ</title>
 	<link rel="stylesheet" href="normalize.css">
 	<link href="style.css" rel="stylesheet">
 	<link rel="preload" href="normalize.css" as="style">
