--- a/index.html
+++ b/index.html
@@ -52,31 +52,28 @@
 			<line x1="4" y1="8" x2="20" y2="8" />
 			<line x1="8" y1="4" x2="8" y2="8" />
 		  </svg></div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, magnam. Perferendis nam vero error quia unde aperiam, earum dolores, nesciunt iusto, ad quod molestiae. Nisi molestias voluptatum consequatur pariatur tempore.</p>
+		<p>creación de sitios web para Internet.</p>
 	</section>
 	<section class="service">
-	<h3>Realizador audiovisual</h3>
-	<div class="icons"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-video" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M15 10l4.553 -2.276a1 1 0 0 1 1.447 .894v6.764a1 1 0 0 1 -1.447 .894l-4.553 -2.276v-4z" />
-  <rect x="3" y="6" width="12" height="12" rx="2" />
-</svg></div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates rerum sit, doloribus explicabo earum voluptatum ex. Error expedita quos voluptas laudantium corporis beatae, obcaecati quisquam neque eius iure, tenetur, laboriosam!</p>
+	<h3>Desarrolador FrontEnd</h3>
+	<div class="icons"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sitemap" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+		<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+		<rect x="3" y="15" width="6" height="6" rx="2" />
+		<rect x="15" y="15" width="6" height="6" rx="2" />
+		<rect x="9" y="3" width="6" height="6" rx="2" />
+		<path d="M6 15v-1a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v1" />
+		<line x1="12" y1="9" x2="12" y2="12" />
+	  </svg></div>
+		<p> es aquella persona encargada de programar el navegador de una web, es decir, es el encargado de traducir las definiciones de diseño y estilo visual realizadas en etapas previas a códigos HTML semántico. Es una de las piezas fundamentales en un proyecto digital.</p>
 	</section>
 	<section class="service">
-		<h3>creador de contenido</h3>
-		<div class="icons"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-movie" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <rect x="4" y="4" width="16" height="16" rx="2" />
-  <line x1="8" y1="4" x2="8" y2="20" />
-  <line x1="16" y1="4" x2="16" y2="20" />
-  <line x1="4" y1="8" x2="8" y2="8" />
-  <line x1="4" y1="16" x2="8" y2="16" />
-  <line x1="4" y1="12" x2="20" y2="12" />
-  <line x1="16" y1="8" x2="20" y2="8" />
-  <line x1="16" y1="16" x2="20" y2="16" />
-</svg></div>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim magni debitis ullam recusandae cupiditate atque tenetur, hic architecto delectus similique aperiam quisquam cumque, a blanditiis dignissimos! Fugit, saepe, nisi! Quas.</p>
+		<h3>Realizador audiovisual</h3>
+		<div class="icons"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-video" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M15 10l4.553 -2.276a1 1 0 0 1 1.447 .894v6.764a1 1 0 0 1 -1.447 .894l-4.553 -2.276v-4z" />
+			<rect x="3" y="6" width="12" height="12" rx="2" />
+		  </svg></div>
+	<p> rodaje de una película, cortometraje, documental, programa de televisión o programas en directo, y que decide qué se ve en pantalla, cómo y cuándo se ve. ... Coordina todos los aspectos técnicos de la emisión o grabación audiovisual.</p>
 
 </div>
 
