--- a/sobre mi.html
+++ b/sobre mi.html
@@ -59,8 +59,8 @@
 		<path d="M7.5 8h3v8l-2 -1" />
 		<path d="M16.5 8h-2.5a0.5 .5 0 0 0 -.5 .5v3a0.5 .5 0 0 0 .5 .5h1.423a0.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5" />
 	  </svg> </p>
-	  <p>Herramientas de diseño y Edición<br>
-	<img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> </p>
+	  <p>Herramientas de diseño y Edición:<br>
+	<img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
 </div>
 	<section>
 		<h2>Contacto</h2>
