--- a/sobre mi.html
+++ b/sobre mi.html
@@ -46,7 +46,7 @@
 	<p>En el año 2020 empece a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
     En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.</p>
 	<p>FrondEnd:<br>
-		<img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"></p>
+		<img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"> <img src="img/GitHub.png" width="56" height="56"></p>
 	  <p>Herramientas de diseño y Edición:<br>
 	<img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
 </div>
