--- a/sobre mi.html
+++ b/sobre mi.html
@@ -52,6 +52,7 @@
 
 <p>Proyectos:</p><br>
 <a class="button" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
+<a class="button" href="https://creavision.com.ar/" target="_blank">TIENDA JUAN CIRELLI</a>
 
 </div>
 
