--- a/sobre mi.html
+++ b/sobre mi.html
@@ -52,7 +52,8 @@
 
 <p>Proyectos:</p><br>
 <a class="button" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
-<a class="button" href="" target="_blank">TIENDA JUAN CIRELLI</a>
+<a class="button" href="#" target="_blank">TIENDA JUAN CIRELLI</a>
+<a class="button" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
 
 </div>
 
