--- a/sobre mi.html
+++ b/sobre mi.html
@@ -50,7 +50,7 @@
 	  <p>Herramientas de diseño y Edición:<br>
 	<img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
 
-<p>Proyectos:</p><br>
+<h3>Proyectos:</h3>
 <a class="button" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
 <a class="button" href="#" target="_blank">TIENDA JUAN CIRELLI</a>
 <a class="button" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
