--- a/sobre mi.html
+++ b/sobre mi.html
@@ -47,8 +47,8 @@
     En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.</p>
 	<p>FrondEnd:<br>
 		<img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"> <img src="img/SASS.png" width="56" height="56"> <img src="img/GitHub.png" width="56" height="56"></p>
-	  <p>Herramientas de diseño y Edición:<br>
-	<img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
+		<h3> Herramientas de diseño y Edición:</h3>
+	  <p><img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
 
 <h3>Proyectos:</h3>
 <a class="button" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
