--- a/sobre mi.html
+++ b/sobre mi.html
@@ -36,10 +36,9 @@
 		  </svg> <span> Santa Fe, Argentina</span></p>
 		<a href="https://api.whatsapp.com/send?phone=543425336098" target="_blank" class="button">Contactar</a>
 	</div>
-	</section>
-	
 	</div>
-		
+</section>
+	
 	<main class="container shadow">
 		<h2>Sobre Mi</h2>
         <div class="service">
@@ -79,7 +78,8 @@
 	</section>
 </main>
 	<footer class="footer"><p>Todos los derechos reservados</p></footer>
-
+	
+<script src="modernizr.js"></script>
 </body>
 </html>
 	
