--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	</section>
 </main>
 	<footer class="footer"><p>Todos los derechos reservados</p></footer>
-
+<script src="modernizr.js"></script>
 </body>
 </html>
 	
