--- a/sobre mi.html
+++ b/sobre mi.html
@@ -50,9 +50,11 @@
 	  <p><img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
 
 <h4>Proyectos:</h4>
+<div class="proyectos">
 <a class="button" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
 <a class="button" href="#" target="_blank">TIENDA JUAN CIRELLI</a>
 <a class="button" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
+</div><!--cierra pryectos-->
 
 </div>
 
