--- a/sobre mi.html
+++ b/sobre mi.html
@@ -51,9 +51,9 @@
 
 <h4>Proyectos:</h4>
 <div class="proyectos">
-<a class="button" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
-<a class="button" href="#" target="_blank">TIENDA JUAN CIRELLI</a>
-<a class="button" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
+<a class="button2" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
+<a class="button2" href="#" target="_blank">TIENDA JUAN CIRELLI</a>
+<a class="button2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
 </div><!--cierra pryectos-->
 
 </div>
