--- a/sobre mi.html
+++ b/sobre mi.html
@@ -54,6 +54,7 @@
 <a class="button2" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
 <a class="button2" href="#" target="_blank">TIENDA JUAN CIRELLI</a>
 <a class="button2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
+<a class="button2" href="#" target="_blank">PROXIMOPROYECTO</a>
 </div><!--cierra pryectos-->
 
 </div>
