--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-	<header><h1 class="titulo">Francisco Sulé</h1>
+	<header id="inicio"><h1 class="titulo">Francisco Sulé</h1>
 	</header>
 	<div class="nav-bg">
 	<nav class="navigation container">
-	<a href="index.html">Inicio</a>
-	<a href="sobre mi.html">Sobre Mi</a>
-		<a href="#">Contacto</a>
+	<a href="#inicio">Inicio</a>
+	<a href="#sobremi">Sobre Mi</a>
+	<a href="#contacto">Contacto</a>
 	</nav>
 	</div>	
 		
@@ -77,7 +77,29 @@
 
 </div>
 
-	<section>
+<section id="sobremi">
+	<h2>Sobre Mi</h2>
+	<div class="service">
+	<p>Soy Francisco Javier Sulé tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
+<p>En el año 2020 empece a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
+En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.</p>
+<h4>tecnologias FrontEnd:</h4>
+<p><img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"> <img src="img/SASS.png" width="56" height="56"> <img src="img/GitHub.png" width="56" height="56"></p>
+	<h4> Herramientas de diseño y Edición:</h4>
+  <p><img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
+
+<h4>Proyectos:</h4>
+<div class="proyectos">
+<a class="button2" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
+<a class="button2" href="#" target="_blank">OCCELARIS</a>
+<a class="button2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
+<a class="button2" href="#" target="_blank">PROXIMO PROYECTO</a>
+</div><!--cierra pryectos-->
+
+</div>
+</section>
+
+	<section id="contacto">
 		<h2>Contacto</h2>
 		<form class="form">
 			<fieldset>
@@ -98,7 +120,9 @@
 	</section>
 </main>
 	<footer class="footer"><p>Todos los derechos reservados</p></footer>
+	<script src="app.js"></script>
 <script src="modernizr.js"></script>
+
 </body>
 </html>
 	
