--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<line x1="4" y1="8" x2="20" y2="8" />
 			<line x1="8" y1="4" x2="8" y2="8" />
 		  </svg></div>
-		<p>creación de sitios web para Internet.</p>
+		<p>Desarrollo web a medida Programación desde cero, gestion de contenidos, Diseño a medida.</p>
 	</section>
 	<section class="service">
 	<h3>Desarrolador FrontEnd</h3>
@@ -64,7 +64,7 @@
 		<path d="M6 15v-1a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v1" />
 		<line x1="12" y1="9" x2="12" y2="12" />
 	  </svg></div>
-		<p> es aquella persona encargada de programar el navegador de una web, es decir, es el encargado de traducir las definiciones de diseño y estilo visual realizadas en etapas previas a códigos HTML semántico. Es una de las piezas fundamentales en un proyecto digital.</p>
+		<p>Actualmente creo, diseño, actualizo y mantengo páginas y portales web.</p>
 	</section>
 	<section class="service">
 		<h3>Realizador audiovisual</h3>
@@ -73,7 +73,7 @@
 			<path d="M15 10l4.553 -2.276a1 1 0 0 1 1.447 .894v6.764a1 1 0 0 1 -1.447 .894l-4.553 -2.276v-4z" />
 			<rect x="3" y="6" width="12" height="12" rx="2" />
 		  </svg></div>
-	<p> rodaje de una película, cortometraje, documental, programa de televisión o programas en directo, y que decide qué se ve en pantalla, cómo y cuándo se ve. ... Coordina todos los aspectos técnicos de la emisión o grabación audiovisual.</p>
+	<p>Creación y edición de videos, fotografía, animaciones y elementos 3D</p>
 
 </div>
 
