--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<meta lang="latin">
+	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,31 +20,31 @@
 	</header>
 
 	<div class="nav-bg">
-	<nav class="navigation container">
+	<nav class="navegacion contenedor">
 	<a href="#inicio">Inicio</a>
 	<a href="#sobremi">Sobre Mi</a>
 	<a href="#contacto">Contacto</a>
 	</nav>
 	</div>	
-	<section class="hero"> 
-		<div class="content">
+	<section class="fondo"> 
+		<div class="contenido">
 		<h2>Desarrollo web</h2>
 		
-		<p class="city"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
+		<p class="ciudad"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 			<circle cx="12" cy="11" r="3" />
 			<path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
 		  </svg> <span> Santa Fe, Argentina</span></p>
-		<a href="https://api.whatsapp.com/send?phone=543425336098" target="_blank" class="button">Contactar</a>
+		<a href="https://api.whatsapp.com/send?phone=543425336098" target="_blank" class="boton">Contactar</a>
 	</div>
 	</section>
 	</div>
 		
-	<main class="container shadow">
+	<main class="contenedor shadow">
 		<h2>Mis servicios</h2>
 	
-	<div class="services">
-		<section class="service">
+	<div class="servicios">
+		<section class="servicio">
 			<h3>Desarrollo web</h3>
 		<div class="icons"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-browser" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -54,7 +54,7 @@
 		  </svg></div>
 		<p>Desarrollo web a medida Programación desde cero, gestion de contenidos, Diseño a medida.</p>
 	</section>
-	<section class="service">
+	<section class="servicio">
 	<h3>Desarrolador FrontEnd</h3>
 	<div class="icons"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sitemap" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
 		<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -66,7 +66,7 @@
 	  </svg></div>
 		<p>Actualmente creo, diseño, actualizo y mantengo páginas y portales web.</p>
 	</section>
-	<section class="service">
+	<section class="servicio">
 		<h3>Realizador audiovisual</h3>
 		<div class="icons"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-video" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -79,7 +79,7 @@
 
 <section id="sobremi">
 	<h2>Sobre Mi</h2>
-	<div class="service">
+	<div class="servicio">
 	<p>Soy Francisco Javier Sulé tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
 <p>En el año 2020 empece a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
 En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.</p>
@@ -90,10 +90,10 @@ En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y
 
 <h4>Proyectos:</h4>
 <div class="proyectos">
-<a class="button2" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
-<a class="button2" href="#" target="_blank">OCCELARIS</a>
-<a class="button2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
-<a class="button2" href="#" target="_blank">PROXIMO PROYECTO</a>
+<a class="boton2" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
+<a class="boton2" href="#" target="_blank">OCCELARIS</a>
+<a class="boton2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
+<a class="boton2" href="#" target="_blank">PROXIMO PROYECTO</a>
 </div><!--cierra pryectos-->
 
 </div>
@@ -112,7 +112,7 @@ En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y
 			<div class="camp"><label>Email</label><input class="input-text"  type="email" placeholder="Email">
 				<div class="camp"><label>Mensaje</label><textarea class="input-text" ></textarea ></div>
 				</div>
-				<div class="submit">	<input class="button"   type="submit" value="Enviar"></div>
+				<div class="submit">	<input class="boton"   type="submit" value="Enviar"></div>
 			
 			
 		</form>
