--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="normalize.css">
 	<link href="style.css" rel="stylesheet">
 	<link rel="preload" href="normalize.css" as="style">
+	<link rel="preload" href="app.js" as="script">
 	<link rel="preload" href="style.css" as="style">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
