--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<line x1="4" y1="8" x2="20" y2="8" />
 			<line x1="8" y1="4" x2="8" y2="8" />
 		  </svg></div>
-		<p>Desarrollo web a medida Programación desde cero, gestion de contenidos, Diseño a medida.</p>
+		<p>Desarrollo web a medida, Programación desde cero, gestion de contenidos, Diseño a medida.</p>
 	</section>
 	<section class="servicio">
 	<h3>Desarrolador FrontEnd</h3>
