--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-	<header id="inicio"><h1 class="titulo">Francisco Sulé</h1>
+	<header><h1 class="titulo">Francisco Sulé</h1>
 	</header>
 
 	<div class="nav-bg">
 	<nav class="navegacion contenedor">
-	<a href="#inicio">Inicio</a>
+	<a href="#servicios">Servicios</a>
 	<a href="#sobremi">Sobre Mi</a>
 	<a href="#contacto">Contacto</a>
 	</nav>
 	</div>	
-	<section class="fondo"> 
+	<section  class="fondo"> 
 		<div class="contenido">
 		<h2>Desarrollo web</h2>
 		
@@ -41,7 +41,7 @@
 	</section>
 	</div>
 		
-	<main class="contenedor shadow">
+	<main id="servicios" class="contenedor shadow">
 		<h2>Mis servicios</h2>
 	
 	<div class="servicios">
