--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<path d="M6 15v-1a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v1" />
 		<line x1="12" y1="9" x2="12" y2="12" />
 	  </svg></div>
-		<p>Actualmente creo, diseño, actualizo y mantengo páginas y portales web.</p>
+		<p>Actualmente creo, diseño, actualizo, mantengo páginas y portales web.</p>
 	</section>
 	<section class="servicio">
 		<h3>Realizador audiovisual</h3>
