--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-	<header><h1 class="titulo">Francisco Sulé</h1>
-	</header>
-
+	<header ><h1 class="titulo">Francisco Sulé</h1>
+	
+<div class="header">
 	<div class="nav-bg">
 	<nav class="navegacion contenedor">
 	<a href="#servicios">Servicios</a>
@@ -27,6 +27,8 @@
 	<a href="#contacto">Contacto</a>
 	</nav>
 	</div>	
+</div>
+</header>
 	<section  class="fondo"> 
 		<div class="contenido">
 		<h2>Desarrollo web</h2>
@@ -41,9 +43,11 @@
 	</section>
 	</div>
 		
-	<main id="servicios" class="contenedor shadow">
-		<h2>Mis servicios</h2>
-	
+	<main  class="contenedor shadow">
+
+		<div id="servicios">
+		<h2>Mis servicios</h2><br>	
+	<br>
 	<div class="servicios">
 		<section class="servicio">
 			<h3>Desarrollo web</h3>
@@ -77,6 +81,7 @@
 	<p>Creación y edición de videos, fotografía, animaciones y elementos 3D</p>
 
 </div>
+</div>
 
 <section id="sobremi">
 	<h2>Sobre Mi</h2>
@@ -100,7 +105,7 @@ En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y
 </div>
 </section>
 
-	<section id="contacto">
+	<section  id="contacto">
 		<h2>Contacto</h2>
 		<form class="form">
 			<fieldset>
