--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-	<header ><h1 class="titulo">Francisco Sulé</h1>
+	<header id="inicio"><h1 class="titulo">Francisco Sulé</h1>
 	
 <div class="header">
 	<div class="nav-bg">
 	<nav class="navegacion contenedor">
+	<a href="#inicio">Inicio</a>
 	<a href="#servicios">Servicios</a>
 	<a href="#sobremi">Sobre Mi</a>
 	<a href="#contacto">Contacto</a>
