--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y
 <h4>Proyectos:</h4>
 <div class="proyectos">
 <a class="boton2" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
-<a class="boton2" href="https://occelaris.netlify.app/" target="_blank">OCCELARIS</a>
+<a class="boton2" href="https://occelaris.netlify.app/" target="_blank">OCELARIS</a>
 <a class="boton2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
 <a class="boton2" href="https://github.com/FranciscoSule?tab=repositories" target="_blank">REPOSITORIO GitHub</a>
 </div><!--cierra pryectos-->
