--- a/index.html
+++ b/index.html
@@ -109,22 +109,22 @@ En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y
 
 	<section  id="contacto">
 		<h2>Contacto</h2>
-		<form class="form">
+	 <form class="form">
 			<fieldset>
 				<legend>contactame llenando todos los campos</legend>
 				<div class="container-camp">
-			<div class="camp"><label>Nombre</label><input  class="input-text"  type="text" placeholder="Nombre">
+			<div class="camp"><label>Nombre</label><input   class="input-text"  type="text" placeholder="Nombre">
 			</div>
-			<div class="camp"><label>Telefono</label><input class="input-text"  type="tel" placeholder="Telefono">
+			<div class="camp"><label>Apellido</label><input class="input-text"  type="text" placeholder="Apellido">
 			</div>
 			<div class="camp"><label>Email</label><input class="input-text"  type="email" placeholder="Email">
-				<div class="camp"><label>Mensaje</label><textarea class="input-text" ></textarea ></div>
+				<div class="camp"><label>Mensaje</label><textarea  class="input-text" ></textarea ></div>
 				</div>
 				<div class="submit">	<input class="boton"   type="submit" value="Enviar"></div>
-			
-			
+				
+			</fieldset>
 		</form>
-	</fieldset>
+
 	</section>
 	
 </main>
