--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 			<line x1="4" y1="8" x2="20" y2="8" />
 			<line x1="8" y1="4" x2="8" y2="8" />
 		  </svg></div>
-		<p>Desarrollo web a medida, Programación desde cero, gestion de contenidos, Diseño a medida.</p>
+		<p>Desarrollo web a medida, Programación desde cero, gestión de contenidos, Diseño a medida.</p>
 	</section>
 	<section class="servicio">
-	<h3>Desarrolador FrontEnd</h3>
+	<h3>FrontEnd Developer</h3>
 	<div class="icons"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sitemap" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
 		<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
 		<rect x="3" y="15" width="6" height="6" rx="2" />
@@ -70,7 +70,7 @@
 		<path d="M6 15v-1a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v1" />
 		<line x1="12" y1="9" x2="12" y2="12" />
 	  </svg></div>
-		<p>Actualmente creo, diseño, actualizo, mantengo páginas y portales web.</p>
+		<p>Actualmente creo, diseño, actualizó, mantengo páginas y portales web.</p>
 	</section>
 	<section class="servicio">
 		<h3>Realizador audiovisual</h3>
