--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<nav class="navegacion contenedor">
 	<a href="#inicio">Inicio</a>
 	<a href="#servicios">Servicios</a>
-	<a href="#sobremi">Sobre Mi</a>
+	<a href="#sobremi">Sobre  mi</a>
 	<a href="#contacto">Contacto</a>
 	</nav>
 	</div>	
@@ -58,7 +58,7 @@
 			<line x1="4" y1="8" x2="20" y2="8" />
 			<line x1="8" y1="4" x2="8" y2="8" />
 		  </svg></div>
-		<p>Desarrollo web a medida, Programación desde cero, gestión de contenidos, Diseño a medida.</p>
+		<p>Desarrollo web a medida, Programación desde cero, gestión de contenidos, diseño a medida.</p>
 	</section>
 	<section class="servicio">
 	<h3>FrontEnd Developer</h3>
@@ -70,7 +70,7 @@
 		<path d="M6 15v-1a2 2 0 0 1 2 -2h8a2 2 0 0 1 2 2v1" />
 		<line x1="12" y1="9" x2="12" y2="12" />
 	  </svg></div>
-		<p>Actualmente creo, diseño, actualizó, mantengo páginas y portales web.</p>
+		<p>Actualmente creo, diseño, actualizo, mantengo páginas y portales web.</p>
 	</section>
 	<section class="servicio">
 		<h3>Realizador audiovisual</h3>
@@ -85,12 +85,12 @@
 </div>
 
 <section id="sobremi">
-	<h2>Sobre Mi</h2>
+	<h2>Sobre mi</h2>
 	<div class="servicio">
-	<p>Soy Francisco Javier Sulé tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
-<p>En el año 2020 empece a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
-En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.</p>
-<h4>tecnologias FrontEnd:</h4>
+	<p>Soy Francisco Javier Sulé, tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
+<p>En el año 2020 empecé a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
+En Septiembre de 2021 empecé en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.</p>
+<h4>tecnologías FrontEnd:</h4>
 <p><img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"> <img src="img/SASS.png" width="56" height="56"> <img src="img/React.png" width="56" height="56"> <img src="img/GitHub.png" width="56" height="56"></p>
 	<h4> Herramientas de diseño y Edición:</h4>
   <p><img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
@@ -112,7 +112,7 @@ En Septiembre de 2021 empece en Desarrollo Web con las tecnologias HTML5, CSS3 y
 		<h2>Contacto</h2>
 	 <form class="form">
 			<fieldset>
-				<legend>contactame llenando todos los campos</legend>
+				<legend>contactame completando todos los campos</legend>
 				<div class="container-camp">
 			<div class="camp"><label>Nombre</label><input   class="input-text"  type="text" placeholder="Nombre">
 			</div>
