--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </header>
 	<section  class="fondo"> 
 		<div class="contenido">
-		<h2>Desarrollo web</h2>
+		<h2>Desarrollo web & applicaciones</h2>
 		
 		<p class="ciudad"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -89,7 +89,8 @@
 	<div class="servicio">
 	<p>Soy Francisco Javier Sulé, tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
 <p>En el año 2020 empecé a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
-En Septiembre de 2021 empecé en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.</p>
+En Septiembre de 2021 empecé en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.
+En Marzo de 2022 comencé con Desarrollo Android con Kotlin.</p>
 <h4>tecnologías FrontEnd:</h4>
 <p><img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"> <img src="img/SASS.png" width="56" height="56"> <img src="img/React.png" width="56" height="56"> <img src="img/GitHub.png" width="56" height="56"></p>
 	<h4> Herramientas de diseño y Edición:</h4>
