--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </header>
 	<section  class="fondo"> 
 		<div class="contenido">
-		<h2>Desarrollo web & applicaciones</h2>
+		<h2>Desarrollo web & apps</h2>
 		
 		<p class="ciudad"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="80" height="80" viewBox="0 0 24 24" stroke-width="1.5" stroke="#00abfb" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
