--- a/index.html
+++ b/index.html
@@ -89,16 +89,19 @@
 	<div class="servicio">
 	<p>Soy Francisco Javier Sulé, tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
 <p>En el año 2020 empecé a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
-En Septiembre de 2021 empecé en Desarrollo Web con las tecnologias HTML5, CSS3 y transcurriendo JavaScript, php, mysql.
+En Septiembre de 2021 empecé en Desarrollo Web.
 En Marzo de 2022 comencé con Desarrollo Android con Kotlin.</p>
 <h4>tecnologías FrontEnd:</h4>
-<p><img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"> <img src="img/SASS.png" width="56" height="56"> <img src="img/React.png" width="56" height="56"> <img src="img/GitHub.png" width="56" height="56"></p>
+<p><img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"> <img src="img/SASS.png" width="56" height="56">  <img src="img/GitHub.png" width="56" height="56"></p>
 	<h4> Herramientas de diseño y Edición:</h4>
   <p><img src="img/Adobe_Photosho.png" width="56" height="56"> <img src="img/adobe-premiere-pro-logo.png" width="56" height="56"> <img src="img/Adobe_Photoshop_Lightroom_Classic_CC.png" width="56" height="56"> <img src="img/Adobe_After_Effects_CC.png" width="56" height="56"> <img src="img/1200px-Adobe_Dimension.png" width="56" height="56"></p>
+
+  <!-- <img src="img/React.png" width="56" height="56"> -->
 
 <h4>Proyectos:</h4>
 <div class="proyectos">
 <a class="boton2" href="https://creavision.com.ar/" target="_blank">CREAVISION</a>
+<a class="boton2" href="https://creavisionportfolio.com.ar/" target="_blank">CREAVISION PORTFOLIO</a>
 <a class="boton2" href="https://ocelaris.netlify.app/" target="_blank">OCELARIS</a>
 <a class="boton2" href="https://gymapk.netlify.app/index.html" target="_blank">GYM APP</a>
 <a class="boton2" href="https://milibiyu.netlify.app/" target="_blank">MILIBIYU</a>
@@ -109,9 +112,9 @@ En Marzo de 2022 comencé con Desarrollo Android con Kotlin.</p>
 </div>
 </section>
 
-	<section  id="contacto">
+	<section   id="contacto">
 		<h2>Contacto</h2>
-	 <form class="form">
+	 <!-- <form class="form">
 			<fieldset>
 				<legend>contactame completando todos los campos</legend>
 				<div class="container-camp">
@@ -125,8 +128,34 @@ En Marzo de 2022 comencé con Desarrollo Android con Kotlin.</p>
 				<div class="submit">	<input class="boton"   type="submit" value="Enviar"></div>
 				
 			</fieldset>
-		</form>
+		</form> -->
+		<div class="contacto">
+		<div class="correo"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+			<rect x="3" y="5" width="18" height="14" rx="2"></rect>
+			<polyline points="3 7 12 13 21 7"></polyline>
+		  </svg><p>franciscosule@gmail.com</p></div>
 
+			<div class="correo">
+				<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+					<rect x="4" y="4" width="16" height="16" rx="2" />
+					<line x1="8" y1="11" x2="8" y2="16" />
+					<line x1="8" y1="8" x2="8" y2="8.01" />
+					<line x1="12" y1="16" x2="12" y2="11" />
+					<path d="M16 16v-3a2 2 0 0 0 -4 0" />
+				  </svg>
+				<p><a class="linkedin" href="https://www.linkedin.com/in/francisco-sul%C3%A9-4b1818229/">Linkedin</a></p>
+			</div>
+
+		  <div class="correo">
+			<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="56" height="56" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+				<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+				<path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+				<path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
+			  </svg>
+			<p>+543425336098</p></div>
+		</div>
 	</section>
 	
 </main>
