--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 	<p>Soy Francisco Javier Sulé, tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
 <p>En el año 2020 empecé a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
 En Septiembre de 2021 empecé en Desarrollo Web.
-En Marzo de 2022 comencé con Desarrollo Android con Kotlin.</p>
+En Marzo de 2022 comencé con Desarrollo Android con Kotlin.<br>
+En Junio de 2022 comencé con el programa #YoProgramo</p>
 <h4>tecnologías FrontEnd:</h4>
 <p><img src="img/HTML5.png" width="56" height="56"> <img src="img/CSS3.png" width="56" height="56"> <img src="img/JS.png" width="56" height="56"> <img src="img/SASS.png" width="56" height="56">  <img src="img/GitHub.png" width="56" height="56"></p>
 	<h4> Herramientas de diseño y Edición:</h4>
