--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.a
 					<line x1="12" y1="16" x2="12" y2="11" />
 					<path d="M16 16v-3a2 2 0 0 0 -4 0" />
 				  </svg>
-				<p><a class="linkedin" href="https://www.linkedin.com/in/francisco-sul%C3%A9-4b1818229/">Linkedin</a></p>
+				<p><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/francisco-sul%C3%A9-4b1818229/">Linkedin</a></p>
 			</div>
 
 		  <div class="correo">
@@ -155,7 +155,7 @@ En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.a
 				<path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
 				<path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
 			  </svg>
-			<p>+543425336098</p></div>
+			  <a href="https://api.whatsapp.com/send?phone=543425336098" target="_blank" class="boton">543425336098</a></div>
 		</div>
 	</section>
 	
