--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 			<path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
 		  </svg> <span> Santa Fe, Argentina</span></p>
 		<a href="https://api.whatsapp.com/send?phone=543425336098" target="_blank" class="boton">Contactar</a>
-	</div>
+		<a href="CV Francisco Sulé Developer en.pdf" download="CV Francisco Sulé Developer en.pdf"  target="_blank" class="boton"> DESCARGAR CV</a>
+		
 	</section>
 	</div>
 		
@@ -156,6 +157,7 @@ En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.a
 				<path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
 			  </svg>
 			  <a href="https://api.whatsapp.com/send?phone=543425336098" target="_blank" class="boton">543425336098</a></div>
+			 
 		</div>
 	</section>
 	
