--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<div class="servicio">
 	<p>Soy Francisco Javier Sulé, tengo 20 años y resido en Santo Tome, Santa Fe, Argentina.</p>
 <p>En el año 2020 empecé a tabajar en la empresa familiar <a target="_blank" href="https://www.creavision.com.ar/">creavision</a> en creacion de contenidos audiovisuales.<br>
-En Septiembre de 2021 empecé en Desarrollo Web.
+En Septiembre de 2021 empecé en Desarrollo Web.<br>
 En Marzo de 2022 comencé con Desarrollo Android con Kotlin.<br>
 En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.argentina.gob.ar/produccion/argentina-programa/segunda-etapa">#YoProgramo</a> .</p>
 <a href="CV Francisco Sulé Developer en.pdf" download="CV Francisco Sulé Developer en.pdf"  target="_blank" class="boton"> DESCARGAR CV</a>
