--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.a
 <a class="boton2" href="https://ocelaris.netlify.app/" target="_blank">OCELARIS</a>
 <a class="boton2" href="https://gymapk.netlify.app/index.html" target="_blank">GYM APP</a>
 <a class="boton2" href="https://milibiyu.netlify.app/" target="_blank">MILIBIYU</a>
+<a class="boton2" href="https://e-comercesule.netlify.app/" target="_blank">FrontEnd Store</a>
+<a class="boton2" href="https://blogdecafesule.netlify.app" target="_blank">Blog de cafe</a>
 <a class="boton2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
 <a class="boton2" href="https://github.com/FranciscoSule?tab=repositories" target="_blank">REPOSITORIO GitHub</a>
 </div><!--cierra pryectos-->
