--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ En Junio de 2022 comencé con el programa <a target="_blank" href="https://www.a
 <a class="boton2" href="https://milibiyu.netlify.app/" target="_blank">MILIBIYU</a>
 <a class="boton2" href="https://e-comercesule.netlify.app/" target="_blank">FrontEnd Store</a>
 <a class="boton2" href="https://blogdecafesule.netlify.app" target="_blank">Blog de cafe</a>
+<a class="boton2" href="https://festivalfiestaarg.netlify.app/" target="_blank">Festival de música</a>
 <a class="boton2" href="https://shooterfotografiadeportiva.netlify.app/" target="_blank">SHOOTER FOTOGRAFIA DEPORTIVA</a>
 <a class="boton2" href="https://github.com/FranciscoSule?tab=repositories" target="_blank">REPOSITORIO GitHub</a>
 </div><!--cierra pryectos-->
